<resources>
    <string name="app_name">Cadastro</string>
    <string name="nome_completo">Nome completo</string>
    <string name="cadastro">Cadastro</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="ingressar_na_lista_de_e_mails">Ingressar na lista de e-mails?</string>
    <string name="sexo">Sexo</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="ex_telefone">Ex.: 12-93456-7890</string>
</resources>