<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/main"
        app:layout_constraintStart_toStartOf="@+id/main"
        app:layout_constraintEnd_toEndOf="@+id/main">
        <TextView
            android:id="@+id/topBarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:text="@string/cadastro"
            android:textSize="18dp"
            android:background="#500090"
            android:textColor="#FFFFFF"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingHorizontal="16dp"
>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_completo" />
            <EditText
                android:id="@+id/nome_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone" />
            <EditText
                android:id="@+id/telefone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail" />
            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <CheckBox
                    android:id="@+id/listaEmail_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingressar_na_lista_de_e_mails" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />
            <RadioGroup
                android:id="@+id/sexo_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feminino"
                    android:minHeight="0dp"
                    android:minWidth="0dp"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cidade" />
            <EditText
                android:id="@+id/cidade_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uf" />
            <Spinner
                android:id="@+id/uf_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border" />
        </LinearLayout>
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>